# ai_workflow_system

./: .dockerignore  .env_EXAMPLE  .env_EXEMPLE  .gitignore  Dockerfile  README.md  docker-compose.yml  login.py  onboarding_setup.py  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: __init__.py  gmail_cli.py  logging_config.py  main.py
app/agents/: base_agent.py  classify_agent.py  draft_agent.py  summarize_agent.py
app/auth/: __init__.py  gmail_auth.py  microsoft_auth.py  oauth_flow.py  token_store.py
app/config/: env_writer.py  pricing.yaml  prompts.yaml  settings.py  user_config.py
app/database/: sqlite_manager.py
app/email/: __init__.py  attachment_detector.py  clean_email.py  create_draft.py  filters.py  gmail_actions.py  gmail_draft_creator.py  gmail_http.py  gmail_reader.py  gmail_sender.py  read_emails.py  replyability.py  test_gmail_connection.py  thread_parser.py
app/llm/: anthropic_client.py  base.py  classify.py  email_analysis.py  generate_reply.py  llm_client.py  prompt_loader.py  provider.py  summarize.py
app/providers/: base.py
app/security/: fs_validation.py  startup_checks.py
app/services/: archive_service.py  (+10 more)
docs/: architecture.md  setup_gmail.md  workflow.md
tests/: test_archive_service.py  test_email_analysis.py  test_email_service.py  test_filing_engine.py  test_fs_validation.py  test_gmail_http.py  test_learning_engine.py  test_mailbox_service.py  test_oauth_flow.py  test_onboarding.py  test_server.py  test_smart_archive_service.py  test_sqlite_hygiene.py  test_user_config.py
web/: server.py
(+8 files in other folders)
