[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-email-workflow-system"
version = "0.1.0"
description = "AI-assisted Outlook email analysis and draft generation workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "msal>=1.29.0",
  "google-api-python-client>=2.169.0",
  "google-auth-oauthlib>=1.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "streamlit>=1.38.0"
]

[tool.setuptools]
packages = ["app"]
